--- a/styles/icon-project.module.scss
+++ b/styles/icon-project.module.scss
@@ -36,7 +36,7 @@
         width: 268px;
         object-fit: cover;
     }
-    @media screen {
+    @media screen and (max-width: 800px) {
         flex-direction: column;
         align-items: center;
         gap: 20px;
