--- a/styles/description-image-project.module.scss
+++ b/styles/description-image-project.module.scss
@@ -16,12 +16,13 @@
             opacity: .2;
             background-color: black;
         }
-        span {
+        div {
             color: #075E8E;
             font-size: 30px;
             font-weight: bold;
             font-style: sans-serif;
             font-display: Roboto;
+            text-align: center;
         }
     }
     .description {
@@ -52,6 +53,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                text-align: center;
             }
             &:hover {
                 .image-footer {
@@ -60,6 +62,61 @@
                     animation-duration: .5s;
                 }
             }
+        }
+        
+    }
+    .list-benefit {
+        display: grid;
+        grid-template-columns: repeat(6, calc(100%/6) );
+        margin-top: 15px;
+        .elm {
+            padding: 5px;
+            .button-chip {
+                width: 100%;
+                padding: 8px 3px;
+                text-align: center;
+                background-color: #83b614;
+                border-radius: 4px;
+                color: #ffffff;
+            }
+        }
+        
+    }
+
+    .slider {
+        margin-top: 20px;
+        padding: 5px;
+        border-radius: 5px;
+        overflow: hidden;
+    }
+
+    @media screen and (max-width: 820px) {
+        .list-benefit {
+            grid-template-columns: repeat(4, calc(100%/4) );
+        }
+    }
+
+    @media screen and (max-width: 720px) {
+        .title {
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 0 5px;
+            div {
+                font-size: 20px;
+            }
+            hr {
+                width: 100%;
+                height: 2px;
+            }
+        }
+        .list-image {
+            flex-direction: column;
+            padding: 10px 5px;
+        }
+    }
+    @media screen and (max-width: 600px) {
+        .list-benefit {
+            grid-template-columns: repeat(2, calc(100%/2) );
         }
     }
 }
