--- a/styles/custom-carousel.module.scss
+++ b/styles/custom-carousel.module.scss
@@ -1,14 +1,25 @@
 .custom-carousel {
     width: 100%;
-    height: 350px;
+    position: relative;
     .img-content {
         width: 100%;
         height: auto;
         object-fit: cover!important;
-        top: 5px;
+        top: 0;
         img {
             border-radius: 5px;
-            
         }
     }
+    .active-left {
+        display: flex;
+    }
+    // .active-right {
+
+    // }
+    .inactive-left {
+        display: none;
+    }
+    // .inctive-right {
+
+    // }
 }
